fixed minor issues

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ LLM_PROVIDER=groq
 
 # Groq settings
 GROQ_API_KEY=your-groq-api-key
-GROQ_MODEL=llama3-70b-8192
+GROQ_MODEL=llama-3.3-70b-versatile
 
 # OpenAI settings
 OPENAI_API_KEY=your-openai-api-key
